Actually fix less margin-right on bell-and-name because of gap
I'm still not sure about calling this the ACTUAL fix but it's not
too difficult to change later. I'll add the lower buttons and then
see how it looks. If it doesn't look good, I should be able to change
it with a single change in margin-right value

--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ body {
   align-items: center;
   height: 3rem;
   font-size: 1.1rem;
-  font-weight: var(--subtitle-like-bold);
+  font-weight: 0 var(--subtitle-like-bold);
   gap: 1.5rem;
 }
 
@@ -125,7 +125,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: right;
-  margin-right: 72px;
+  margin-right: 96px;
   gap: 24px;
   font-weight: var(--title-like-bold);
 }
